Introduce lombok, fix variable setting and autoComplete issue, remove complex objects from process variables